# systems-workshop3

./: CMakeLists.txt  README.md  install_library.sh
src/: CMakeLists.txt
src/master/: CMakeLists.txt
src/worker/: CMakeLists.txt
